@@ -15,26 +15,7 @@
 """Named constants used in YubiHSM commands."""
 
 from cryptography.hazmat.primitives.asymmetric import ec
-from cryptography import utils  # type: ignore
 from enum import IntEnum, IntFlag, unique
-
-
-@utils.register_interface(ec.EllipticCurve)
-class BRAINPOOLP256R1(object):
-    name = "brainpoolP256r1"
-    key_size = 256
-
-
-@utils.register_interface(ec.EllipticCurve)
-class BRAINPOOLP384R1(object):
-    name = "brainpoolP384r1"
-    key_size = 384
-
-
-@utils.register_interface(ec.EllipticCurve)
-class BRAINPOOLP512R1(object):
-    name = "brainpoolP512r1"
-    key_size = 512
 
 
 @unique
@@ -216,9 +197,9 @@ _curve_table = {
     ALGORITHM.EC_P384: ec.SECP384R1,
     ALGORITHM.EC_P521: ec.SECP521R1,
     ALGORITHM.EC_K256: ec.SECP256K1,
-    ALGORITHM.EC_BP256: BRAINPOOLP256R1,
-    ALGORITHM.EC_BP384: BRAINPOOLP384R1,
-    ALGORITHM.EC_BP512: BRAINPOOLP512R1,
+    ALGORITHM.EC_BP256: ec.BrainpoolP256R1,
+    ALGORITHM.EC_BP384: ec.BrainpoolP384R1,
+    ALGORITHM.EC_BP512: ec.BrainpoolP512R1,
 }
 
 
