@@ -3,7 +3,8 @@
  ** Dropped Python 2 support, new minimum requirement: Python 3.6.
  ** Added type hints.
  ** Bumped minimum supported Cryptography version to 2.6.
- ** Dropped yubihsm.eddsa package in favor of EdDSA support in Cryptography.
+ ** Dropped yubihsm.eddsa package, in favor of EdDSA support in Cryptography.
+ ** Dropped custom constants for Brainpool curves, in favor of those in Cryptography.
  ** Changes relevant to maintainers:
  *** Added mypy to pre-commit checks.
  *** Switched build and packaging system to poetry.
